--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
@@ -38,9 +38,27 @@
 }
 
 ::ng-deep .p-calendar{
-  height: 53%;
-  width: 100%;
-  border-radius: 4px;
+  height: 32px !important;
+  width: 350px;
+
+}
+::ng-deep
+.p-datepicker table td > span {
+  width:1.5rem;
+  height: 1.5rem;
+  font-size: 14px;
+}
+::ng-deep .p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-year {
+  font-size: 14px;
+}
+::ng-deep .p-datepicker .p-datepicker-header .p-datepicker-title .p-datepicker-month{
+  font-size: 14px;
+}
+::ng-deep .p-datepicker table th > span{
+  font-size: 14px;
+}
+::ng-deep .p-datatable.p-datatable-sm .p-datatable-thead > tr > th{
+  padding:8px;
 }
 
 ::ng-deep .p-dropdown{
@@ -48,22 +66,36 @@
   width: 100%;
   border: 1px solid rgba(0, 0, 0, 0.20);
   border-radius: 4px;
-}
-::ng-deep .p-dropdown .p-dropdown-label.p-placeholder{
+  }
+  ::ng-deep .p-dropdown .p-dropdown-label.p-placeholder{
   padding:3px;
-}
 
-::ng-deep
-.p-dropdown .p-dropdown-label {
-  padding: 3px;
-}
 
-::ng-deep
-.p-dropdown-filter {
-  width: 100%;
-  height: 53%;
-  border-radius: 4px;
-}
+  }
+
+  ::ng-deep
+  .p-dropdown .p-dropdown-label {
+      padding: 3px;
+      font-size: 14px;
+      color: #000;
+  }
+
+  ::ng-deep
+  .p-dropdown-filter {
+      width: 100%;
+      height: 30px;
+      border-radius: 4px;
+  }
+  ::ng-deep .p-dropdown-panel .p-dropdown-items .p-dropdown-item{
+    font-size: 14px;
+    color: #000;
+    padding:3px 20px;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+  }
 #quote-input{
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.20);
